--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         </div>
     </footer>
 
+    <script src="RenderEngine.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
