Fix: Enabled interactive buttons, filters, and DNA mixer logic

--- a/index.html
+++ b/index.html
@@ -75,12 +75,16 @@
             <div class="mixer-interface">
                 <div class="mixer-slot" id="slot-a">
                     <div class="slot-label">Style A (Base)</div>
-                    <div class="slot-select" id="select-a">Select DNA</div>
+                    <select class="slot-select" id="select-a">
+                        <option value="">Select DNA</option>
+                    </select>
                 </div>
                 <div class="mixer-plus">+</div>
                 <div class="mixer-slot" id="slot-b">
                     <div class="slot-label">Style B (Modifier)</div>
-                    <div class="slot-select" id="select-b">Select DNA</div>
+                    <select class="slot-select" id="select-b">
+                        <option value="">Select DNA</option>
+                    </select>
                 </div>
                 <div class="mixer-arrow"><i data-lucide="arrow-right"></i></div>
                 <div class="mixer-result">
