feat: Translated content to English and upgraded UI with structured grid layout

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GFIMS Design Universe | 차세대 디자인 DNA 라이브러리</title>
-    <meta name="description" content="전 세계의 시각적 유산에서 추출한 디자인 DNA와 에이전틱 프롬프트 빌더.">
+    <title>GFIMS Design Universe | Next-Gen Design DNA Library</title>
+    <meta name="description" content="Design DNA and Agentic Prompt Builder extracted from global visual heritage.">
     <link rel="stylesheet" href="style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
