feat: Brutalist Layout, Dark/Light Mode, and Extended Translation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     
     <nav class="glass-nav">
         <div class="nav-content">
-            <div class="logo">GFIMS <span>Universe</span></div>
+            <div class="logo">GFIMS <span>UNIVERSE</span></div>
+            <div class="theme-toggle" id="theme-toggle" title="Toggle Dark/Light Mode">
+                <i data-lucide="sun"></i>
+            </div>
             <div class="nav-links">
                 <a href="#" class="active">DNA Library</a>
                 <a href="#dna-mixer">DNA Hybridizer</a>
